# openstackoid

./: Vagrantfile  oid-installer.sh  openstack-image-list.sh  setup.cfg
misc/: installer.sh  oid-installer.sh  openstackoid.sh  services.json
oidinterpreter/: services.json
oidinterpreter/oidinterpreter/: __init__.py  oidinterpreter.py
oidinterpreter/oidinterpreter/utils/: scope.py  session.py
openstackoid/: __init__.py  client.py  configuration.py  dispatcher.py  interpreter.py  keystoneauth1.py  keystonemiddleware.py  shell.py  utils.py
openstackoid/client/: command.py  image.py  server.py
openstackoid/http/: headers.py  hooks.py  request.py  send.py
openstackoid/tests/functional/: dispatcher.py  interpreter.py
playbooks/: devstack.yml
python-openstackoidclient/openstackoidclient/: client.py
