[metadata]
name = openstackoid
version = 0.0.1
summary = Collaborative OpenStack Clouds on Demand
keywords = OpenStack, reproducible research, Grid5000
license_file = LICENSE
url = https://gitlab.inria.fr/discovery/openstackoid
author = Discovery Open Science Initiative
author_email = discovery-dev@inria.fr
long_description = file: README.org
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    openstackoid

[options]
include_package_data = True
setup_requires =
    setuptools >=38.3.0

install_requires =
    requests

[options.entry_points]
openstack.cli.base =
    openstackoid=openstackoid.client

[options.packages.find]
exclude =
    docs

[bdist_wheel]
universal=1
